# devoxx-france-2026

./: README.md  pyproject.toml
helpers/: qiskit.py
media/: grover.webm  h.webm  plus.webm  x.webm  x_delay.webm
