[project]
name = "devoxx-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "jupyter",
    "matplotlib",
    "pylatexenc",
    "qiskit-algorithms>=0.3.1,<0.4",
    "qiskit-ibm-runtime",
    "qiskit-alice-bob-provider>=1.2.0,<1.3",
    "qutip>=5.2.3",
    "tqdm>=4.67.1,<4.68",
    "tweedledum",
]

[tool.uv.sources]
tweedledum = { git = "https://github.com/Alice-Bob-SW/tweedledum", rev = "1.1.2-ab.2" }